教材申报提交时触发的系统消息 发送人记录为申报人